--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,12 @@ description: Devking's tech blog.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
-
+url: http://git.devking.me
+baseurl: ""
 github:
   zip_url: http://www.naver.com
   tar_url: http://www.daum.net
+
+# Build settings
+markdown: kramdown
+permalink: pretty
