--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Devking
 description: Devking's tech blog.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
 url: http://git.devking.me
