타임존 변경. post.html 추가.

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ baseurl: ""
 github:
   zip_url: http://www.naver.com
   tar_url: http://www.daum.net
+timezone: Asia/Seoul
 
 # Build settings
 markdown: kramdown
